# ft_linear_regression

./: CMakeLists.txt  Description.txt  Questions.txt  TODO.txt  build.sh  clean.sh  line.txt  main.cpp  showInput.py
Assess/: main.cpp
Data/: usdToUah.txt
Learn/: main.cpp
ShowPrecision/: main.cpp
Sources/: Utils.cpp  Utils.hpp
UnitTests/: Utils.cpp
Visualize/: main.cpp  plot.py
